--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "aos": "^3.0.0-beta.6",
     "firebase": "^10.5.0",
     "localforage": "^1.10.0",
+    "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "sort-by": "^1.2.0",
     "swiper": "^10.3.1"
