--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.2",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
     "react-rating": "^2.0.5",
