--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.2",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.16.0",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.7.32",
     "swiper": "^10.3.1"
   },
   "devDependencies": {
