--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.0.0",
     "aos": "^3.0.0-beta.6",
     "firebase": "^10.5.0",
     "localforage": "^1.10.0",
