--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.3.1",
+    "@stripe/stripe-js": "^2.1.9",
     "@tanstack/react-query": "^5.0.0",
     "aos": "^3.0.0-beta.6",
+    "axios": "^1.5.1",
     "firebase": "^10.5.0",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
